# english-vocabulary-learning

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_init.py  0002_telegram_id_bigint.py  0003_srs_training_reminders.py  0004_words_manage_indexes.py  0005_translation_cache.py  0006_user_settings.py  0007_pronunciation_logs.py  0008_sm2_srs_fields.py  0009_training_session_word_id.py  0010_admin_panel.py  0011_user_streaks.py  0012_leaderboard_profiles.py  0013_quiz_pronunciation_results.py  0014_credits.py  0015_stars_payments.py  0016_credit_ledger_event_type_len.py  0017_packages.py  0018_package_seconds.py  0019_app_settings.py  0020_remove_daily_limits.py  0021_bot_admins.py  0022_settings_change_log.py
app/: config.py  main.py
app/bot/handlers/: add_word.py  help.py  help_content.py  manage_words.py  menu.py  profile.py  pronunciation.py  pronunciation_text.py  quiz.py  settings.py  start.py  stats.py  training.py  word_selection.py
app/bot/keyboards/: credits.py  help.py  main.py  manage_words.py  profile.py  pronunciation.py  quiz.py  selection.py
app/bot/middlewares/: blocked.py  ignore_not_modified.py
app/data/: bad_words.txt  word_examples.json
app/db/: models.py  session.py
app/services/: backup.py  feature_flags.py  i18n.py  log_buffer.py  quiz.py  reminders.py  srs.py
app/utils/: audio.py  bad_words.py
locales/: .buttons.uz.yml  .messages.uz.yml  buttons.uz.yml  messages.uz.yml
scripts/: sm2_test.py
(+92 files in other folders)
