[project]
name = "english-vocabulary-learning-bot"
version = "0.1.0"
description = "Telegram SRS bot"
requires-python = ">=3.12"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["app"]
